editorial: refactor content; persons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,15 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
-      "@styles/*": ["src/styles/*"],
+      "@components/*": ["src/components/*"],
+      "@data/*": ["src/data/*"],
       "@compositions/*": ["src/compositions/*"],
+      "@content/*": ["src/content/*"],
+      "@layouts/*": ["src/layouts/*"],
       "@sections/*": ["src/sections/*"],
-      "@utils/*": ["src/utils/*"],
-      "@layouts/*": ["src/layouts/*"]
+      "@styles/*": ["src/styles/*"],
+      "@utils/*": ["src/utils/*"]
     }
   }
 }
